# Sentinel

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: CpuMonitor.h  Factory.h  Monitor.h
src/: CpuMonitor.cpp  Factory.cpp  main.cpp
